# story-forge

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PLAN_LONG.md  PLAN_SHORT.md  README.md  SECURITY.md  docker-compose.yml  story-forge-poc-spec.md
.claude/: settings.json
.codex/: RUNTIME_NOTES.md
.github/workflows/: ci.yml
architecture/: AGENTS.md  CHANGELOG.md  INDEX.md  PROJECT.md  invariants.md  learning-log.md  open-questions.md  overview.md
architecture/components/: .gitkeep  entity-edit-service.md  llm-router.md
architecture/decisions/: .gitkeep
architecture/glossary/: agent.md  backend-for-frontend.md  blocking.md  c4-model.md  cascade-matching.md  compensating-transaction.md  compliance-audit-layer.md  connected-components.md  controlled-vocabulary.md  defense-in-depth.md  direct-manipulation.md  ego-graph.md  entity-resolution.md  fail-closed.md  failover.md  glossary.md  human-in-the-loop.md  idempotency.md  intra-batch-dedup.md  invariant.md  lost-update.md  materialization.md  model-tier-routing.md  multi-tenancy.md  open-world-ontology.md  poison-message.md  prefer-deterministic.md  prompt-injection.md  provenance.md  referential-integrity.md  toctou.md  (+6 more)
backend/: .env.example  AGENTS.md  CLAUDE.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2026_05_20_2205-bdfb9ec11d7e_create_document_tree.py  2026_06_02_1536-60ebe30ec792_create_llm_calls.py  2026_06_09_1933-d721987b4168_create_entity_mentions.py  2026_06_11_0956-2b5e854961e1_add_latency_ms_to_llm_calls.py  2026_06_12_1037-cf0a36d67a73_add_entity_mention_embedding.py  2026_06_15_1200-30cb9c529752_create_candidates.py  2026_06_16_1738-893f57edb237_create_staged_relations.py  2026_06_19_1236-3d760a15b9f9_create_graph_edits.py  2026_06_20_2033-285403049b2b_add_graph_edit_grouping.py  2026_06_22_1710-d5971b7919ab_add_manual_mentions_and_suppressions.py  2026_06_24_1200-c0c7904a555c_drop_projects_world_id.py  2026_07_01_1706-3d13842c6211_add_staged_relations_edge_id_index.py  2026_07_07_1200-b1c2d3e4f5a6_create_duplicate_suggestion_dismissals.py  2026_07_13_1300-e7f8a9b0c1d2_create_label_pair_dismissals.py
backend/scripts/: dump_openapi.py
backend/src/story_forge/: AGENTS.md  CLAUDE.md  __init__.py  config.py  main.py
backend/src/story_forge/adapters/: __init__.py  accepted_entity_reader.py  db.py  label_vocabulary_reader.py  neo4j_repo.py  postgres_candidate_store.py  postgres_duplicate_dismissal_store.py  postgres_edit_store.py  postgres_label_dismissal_store.py  postgres_mention_store.py  postgres_relation_store.py  postgres_repo.py  upload_storage.py
backend/src/story_forge/adapters/llm/: __init__.py  base.py  cost.py  ollama.py  openrouter.py  postgres_cost_store.py  router.py
backend/src/story_forge/agents/: __init__.py  candidate_rematch.py  candidate_review.py  candidate_staging.py  chunking_agent.py  chunking_coordinator.py  embedding_agent.py  entity_edit.py  extraction_agent.py  extraction_coordinator.py  extraction_graph.py  json_output.py  judge_agent.py  matching_agent.py  prener_agent.py  relation_review.py  validation.py
backend/src/story_forge/api/: llm.py  projects.py  responses.py  stories.py
backend/src/story_forge/domain/: __init__.py  candidates.py  chunking.py  duplicate_clusters.py  edge_evidence.py  entity_edits.py  entity_merge.py  entity_summary.py  extraction.py  graph.py  graph_edit.py  graph_undo.py  highlights.py  label_synonyms.py  language.py  models.py  name_similarity.py  neighbourhood.py  parsing.py  predicate_rename.py  relation_rekey.py  story_scope.py
backend/src/story_forge/prompts/: __init__.py  chunking.en.j2  chunking.pl.j2  extraction.en.j2  extraction.pl.j2  judge.en.j2  judge.pl.j2
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: test_candidates.py  test_candidates_api.py  test_cost_store.py  test_duplicate_dismissals.py  test_duplicate_suggestions_api.py  test_edge_evidence_api.py  test_edge_evidence_store.py  test_entities_search.py  test_entity_detail.py  test_entity_edit.py  test_entity_edit_api.py  test_extract.py  test_extraction_persistence.py  test_graph.py  test_graph_edit_grouping.py  test_label_dismissals.py  test_label_vocabulary_api.py  test_manual_tagging_api.py  test_migrations.py  test_neo4j_repo.py  test_postgres_repo.py  test_projects.py  test_reader.py  test_relations.py  test_relations_api.py  test_story_detail.py  test_structure.py  test_upload.py
backend/tests/unit/: test_conftest_guard.py
backend/tests/unit/adapters/: test_db.py  test_label_vocabulary_reader.py  test_upload_storage.py
backend/tests/unit/adapters/llm/: test_ollama.py  test_openrouter.py  test_router.py
backend/tests/unit/agents/: test_candidate_rematch.py  test_candidate_review.py  test_candidate_staging.py  test_chunking_agent.py  test_chunking_coordinator.py  test_embedding_agent.py  test_entity_edit.py  test_extraction_agent.py  test_extraction_coordinator.py  test_extraction_graph.py  test_json_output.py  test_judge_agent.py  test_matching_agent.py  test_prener_agent.py  test_relation_review.py
backend/tests/unit/api/: test_enrich_candidate_view.py  test_llm_status.py
backend/tests/unit/domain/: test_chunking.py  test_duplicate_clusters.py  test_edge_evidence.py  test_entity_edits.py  test_entity_merge.py  test_entity_summary.py  test_graph_undo.py  test_highlights.py  test_label_synonyms.py  test_language.py  test_name_similarity.py  test_neighbourhood.py  test_parsing.py  test_predicate_rename.py  test_relation_rekey.py  test_story_scope.py
docs/: AGENTS.md  BACKLOG.md  CLAUDE.md  CODE_GUIDE.md  PLAN_ARCHIVE.md  PLAN_LONG.md  PLAN_SHORT.md  SECURITY_POSTURE.md  scratch-docs-skip-test.md
frontend/: .prettierignore  .prettierrc.json  AGENTS.md  CLAUDE.md  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
meta-architect/: README.md  UPSTREAM.md
scripts/: check_dependency_age.py  check_ollama_cloud.py  check_openrouter.py  pin_hf_model.py
(+289 files in other folders)
