[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "story-forge"
version = "0.0.0"
description = "Story Forge backend — agent-orchestrated narrative analysis with a Neo4j knowledge graph"
readme = "../README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Marcin" }]

# Exact pins only — see spec §6.7. The dep-age script (scripts/check_dependency_age.py)
# fails CI on any non-exact pin and on any pin <14 days old.
# All versions below were released on or before 2026-05-05 (verified via PyPI).
dependencies = [
  "fastapi==0.136.1",
  "uvicorn[standard]==0.46.0",
  "pydantic==2.13.3",
  "pydantic-settings==2.14.0",
  "alembic==1.18.4",
  "sqlalchemy==2.0.49",
  "psycopg[binary]==3.3.4",
  "python-multipart==0.0.27",
  "python-docx==1.2.0",
  "langdetect==1.0.9",
  "jinja2==3.1.6",
  "httpx==0.28.1",
]

[dependency-groups]
dev = [
  "ruff==0.15.12",
  "mypy==1.20.2",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
]

# --- Hatchling (src layout) -------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/story_forge"]

# --- Ruff -------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Sensible defaults: pyflakes, pycodestyle, isort, bugbear, pyupgrade, simplify, walrus.
select = ["E", "F", "I", "B", "UP", "SIM", "W", "C4"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # asserts in tests are fine

[tool.ruff.format]
# defaults; black-compatible

# --- Mypy -------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

# langdetect ships no type stubs or py.typed marker.
[[tool.mypy.overrides]]
module = ["langdetect.*"]
ignore_missing_imports = true

# --- Pytest -----------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
  "integration: needs a real Postgres (uses the story_forge_test DB fixture). Skip with -m 'not integration'.",
]
