[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "story-forge"
version = "0.0.0"
description = "Story Forge backend — agent-orchestrated narrative analysis with a Neo4j knowledge graph"
readme = "../README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Marcin" }]

# Exact pins only — see spec §6.7. The dep-age script (scripts/check_dependency_age.py)
# fails CI on any non-exact pin and on any pin <14 days old; the backend SCA gate
# (osv-scanner vs uv.lock, .github/workflows/ci.yml) fails CI on any known advisory.
# Versions are verified ≥14 days old via PyPI at pin time.
dependencies = [
  "fastapi==0.136.1",
  # starlette is a fastapi transitive; pinned explicitly to force the security bump
  # off 1.0.0 (GHSA-86qp-5c8j-p5mr / PYSEC-2026-161 — Host-header path poisoning,
  # the advisory the SCA gate exists to catch). Drop this pin once fastapi requires
  # starlette>=1.0.1 on its own.
  "starlette==1.0.1",
  "uvicorn[standard]==0.46.0",
  "pydantic==2.13.3",
  "pydantic-settings==2.14.0",
  "alembic==1.18.4",
  "sqlalchemy==2.0.49",
  "psycopg[binary]==3.3.4",
  "python-multipart==0.0.27",
  "python-docx==1.2.0",
  "langdetect==1.0.9",
  "jinja2==3.1.6",
  "httpx==0.28.1",
  "spacy==3.8.14",
  # Async Neo4j driver for the M2.S4 graph writes. Pinned to the 5.x LTS driver
  # line to match the 5.26-community server (docker-compose.yml) — same-major is
  # the lowest-risk compatibility choice; the 6.x line targets the newer 2025.x
  # servers we don't run.
  "neo4j==5.28.4",
]

[dependency-groups]
dev = [
  "ruff==0.15.12",
  "mypy==1.20.2",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
]
# spaCy pipeline models — heavy (~950 MB) and not on PyPI, so they live in their own
# group that `uv sync` does NOT install by default: CI stays lean and the model-loading
# tests auto-skip (see tests/unit/agents/test_prener_agent.py). Run `uv sync --group
# models` locally to exercise PreNER end-to-end. Pinned as GitHub-release wheels per
# spec §6.7 "Direct-URL wheel channel": exact by construction (immutable release asset),
# SHA-256-locked in uv.lock, and 14-day-soak-checked against the GitHub release date by
# check_dependency_age.py (which scans dependency-groups). Both 3.8.0 wheels published
# 2024-09-30, compatible with the spacy 3.8.x range. OSV gate is N/A (not indexed).
models = [
  "pl_core_news_lg @ https://github.com/explosion/spacy-models/releases/download/pl_core_news_lg-3.8.0/pl_core_news_lg-3.8.0-py3-none-any.whl",
  "en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
]

# --- Hatchling (src layout) -------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/story_forge"]

# --- Ruff -------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Sensible defaults: pyflakes, pycodestyle, isort, bugbear, pyupgrade, simplify, walrus.
select = ["E", "F", "I", "B", "UP", "SIM", "W", "C4"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # asserts in tests are fine

[tool.ruff.format]
# defaults; black-compatible

# --- Mypy -------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

# langdetect ships no type stubs or py.typed marker.
[[tool.mypy.overrides]]
module = ["langdetect.*"]
ignore_missing_imports = true

# --- Pytest -----------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
  "integration: needs a real Postgres (uses the story_forge_test DB fixture). Skip with -m 'not integration'.",
]
